--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,20 @@
 @import "tailwindcss";
 
+#about {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    scale: 0.8;
+    opacity: 0;
+  }
+  to {
+    scale: 1;
+    opacity: 1;
+  }
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
